<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:paddingTop="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="#F7F7F7"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:background="@color/white"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:textSize="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CAC6BF"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#FBF8EF"
            android:background="#F7F7F7"
            android:onClick="onClear"
            android:text="@string/clr"
            android:textSize="25sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnBackSpace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onCE"
            android:text="@string/CE"
            android:textSize="25sp"
            android:background="#FBF8EF"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnBS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/BS"
            android:textSize="25sp"
            android:backgroundTint="#FBF8EF"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />



        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="#C8FBF8EF"
            android:text="@string/Divide"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CAC6BF"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />


        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="#FBF8EF"
            android:text="@string/Multiply"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CAC6BF"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />


        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="#FBF8EF"
            android:text="@string/Subtract"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CAC6BF"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />





        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/Add"
            android:backgroundTint="#FBF8EF"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CAC6BF"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/Dot"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />



        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:backgroundTint="#FBF8EF"
            android:text="@string/Equal"
            android:textSize="25sp"
            android:background="#F7F7F7"
            app:cornerRadius="0dp" />


    </LinearLayout>

</LinearLayout>